--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -67,7 +67,7 @@
                                         <span>Keep Shopping</span>
                                     </a>
                                     <a href="" class="btn btn-primary rounded-0 ">
-                                        <i class="fas fa-credit-card"></i>
+                                        <i class="fas fa-lock"></i>
                                         <span>Checkout</span>
                                     </a>
                                 </td>
