--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
                 </div>
             </li>
             <li class="list-inline-item">
-                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link d-none d-lg-inline-block"
+                <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-white{% endif %} nav-link d-none d-lg-inline-block"
                     href="{% url 'view_cart' %}">
                     <div class="text-center">
                         <div><i class="fas fa-shopping-cart fa-lg"></i></div>
@@ -138,22 +138,21 @@
   </button>
 
 <footer class="text-center text-lg-start footer text-muted">
-    <div class="text-center">
-    <span>Sign up to Our Newsletter:</span>
-    <form method="GET" action="">
-        <div class="input-group w-50 pt-0 pt-sm-5 mx-auto">
-            <input class="form-control  rounded-0" type="text" name="Newsletter" placeholder="Sign up to Our Newsletter">
-            <div class="input-group-append">
-                <button class="form-control btn btn-primary border rounded-0 ml-1" type="submit">
-                    <i class="fas fa-newspaper"></i>
-                </button>
+      <div class="container text-center text-md-start mt-5">
+        <div class="row">
+            <div class="col-12">
+                <form method="GET" action="">
+                    <div class="input-group w-50 pt-0 pt-sm-5 mx-auto">
+                        <input class="form-control  rounded-0" type="text" name="Newsletter" placeholder="Sign up to Our Newsletter">
+                        <div class="input-group-append">
+                            <button class="form-control btn btn-primary border rounded-0 ml-1" type="submit">
+                                <i class="fas fa-envelope fa-lg"></i>
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
-    </form>
-    </div>
-
-    <!-- Section: Links  -->
-      <div class="container text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row mt-3">
           <!-- Grid column -->
@@ -175,20 +174,22 @@
                 Join us on Social Media
             </h6>
             <p>
-                <a href="" class="me-4 text-reset"><i class="fab fa-facebook-f fa-lg"></i></a> 
+                <a href="" class="me-4 text-reset"><i class="fab fa-facebook-f fa-lg"></i>
+                 @ Lorem Ipsum
+                </a>
             </p>
             <p>
-                <a href="" class="me-4 text-reset"><i class="fab fa-twitter fa-lg"></i></a> 
+                <a href="" class="me-4 text-reset"><i class="fab fa-twitter fa-lg"></i>
+                @ Lorem Ipsum
+                </a>
             </p>
             <p>
-                <a href="" class="me-4 text-reset"><i class="fab fa-instagram fa-lg"></i></a> 
+                <a href="" class="me-4 text-reset"><i class="fab fa-instagram fa-lg"></i>
+                @ Lorem Ipsum
+                </a>
             </p>
           </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mt-5">
-            <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
               Useful links
             </h6>
@@ -202,11 +203,7 @@
               <a href="#" class="text-reset">Contact</a>
             </p>
           </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mt-5 ">
-            <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
             <p><i class="fas fa-home me-3"></i> Stockholm, Sweden, 111 11</p>
             <p>
@@ -215,9 +212,7 @@
             </p>
             <p><i class="fas fa-phone me-3"></i> + 01 234 567 89</p>
           </div>
-          <!-- Grid column -->
         </div>
-        <!-- Grid row -->
       </div>
     <div class="text-center p-4">
       © 2021 Copyright: Educational Purposes Only
