--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,5 +1,4 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
-    <div class="arrow-up arrow-info"></div>
+<div class="toast rounded-0 border-top-0" data-autohide="false">
     <div class="w-100 toast-capper bg-info"></div>
     <div class="toast-header bg-white text-info">
         <strong class="mr-auto">Info</strong>
