Added checkout app and models

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -145,6 +145,11 @@ body, html {
         justify-content: center;
         padding-top: 2rem;
     }
+
+
+    #main-nav {
+        background-color: #292b2c;
+    }
 }
 @media (max-width: 768px) {
 
