--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -55,7 +55,7 @@
                                     <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
                                     {% if free_shipping_delta > 0 %}
                                         <p class="mb-1 text-danger">
-                                            You could get free delivery by spending just <strong>${{ free_shipping_delta|floatformat:2 }}</strong> more
+                                            You could get free shipping by spending just <strong>${{ free_shipping_delta|floatformat:2 }}</strong> more
                                         </p>
                                     {% endif %}
                                 </td>
@@ -66,7 +66,7 @@
                                         <i class="fas fa fa-chevron-left"></i>
                                         <span>Keep Shopping</span>
                                     </a>
-                                    <a href="" class="btn btn-primary rounded-0 ">
+                                    <a href="{% url 'checkout' %}" class="btn btn-primary rounded-0 ">
                                         <i class="fas fa-lock"></i>
                                         <span>Checkout</span>
                                     </a>
@@ -80,8 +80,8 @@
                         <i class="fas fa fa-chevron-left"></i>
                         <span>Keep Shopping</span>
                     </a>
-                    <a href="" class="btn btn-primary rounded-0 ">
-                        <i class="fas fa-credit-card"></i>
+                    <a href="{% url 'checkout' %}" class="btn btn-primary rounded-0 ">
+                        <i class="fas fa-lock"></i>
                         <span>Checkout</span>
                     </a>
                 {% endif %}
