Added deals view and template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -161,4 +161,8 @@ body, html {
         margin-top: 30vh !important;
         font-size: larger;
     }
+
+    .page-header {
+        margin-top: 10vh;
+    }
 }
