--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -68,14 +68,6 @@
                     </table>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-8">
-                    <a href="{% url 'products' %}?discounted_price" class="btn btn-black rounded-0">
-                        <i class="fas fa fa-chevron-left"></i>
-                        <span>Check out our deals!</span>
-                    </a>
-                </div>
-            </div>
         </div>
         <div class="col-lg-4">
             <div class="card mb-4">
@@ -108,6 +100,14 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <a href="{% url 'products' %}?discounted_price" class="btn btn-black rounded-0">
+                    <i class="fas fa fa-chevron-left"></i>
+                    <span>Check out our deals!</span>
+                </a>
             </div>
         </div>
     </div>
