--- a/products/templates/products/deals.html
+++ b/products/templates/products/deals.html
@@ -11,7 +11,7 @@
         <div class="col-lg-12 home-link page-header">
             <a href="{% url 'home' %}" class="text-black">
             <i class="fas fa-home"></i> Home </a>
-            <span>> Shop</span>
+            <span>> Shop > Deals</span>
             <div class="sort-select-wrapper d-flex d-inline-flex w-25">
                 <select id="sort-selector"
                     class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
@@ -39,7 +39,7 @@
     </div>
     <div class="row">
         <div class="col text-center page-header">
-            <h2 class="logo-font">Products</h2>
+            <h2 class="logo-font">Deals</h2>
             <hr class="w-50 mb-1">
         </div>
     </div>
