--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -15,7 +15,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="{% url 'products' %}?discounted_price">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="{% url 'deals' %}">
                 Deals
             </a>
         </li>
