--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -125,6 +125,15 @@
         </div>
     </div>
 </div>
+<div id="loading-overlay">
+    <div class="text-primary logo-font loading-spinner">
+        <h1>
+        <span class="icon text-white">
+            <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+        </span>
+        </h1>
+    </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
