--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-between align-items-center py-3">
-        <h2 class="h5 mb-0"><a href="#" class="text-muted"></a> Order #{{ order.order_number }}</h2>
+        <h2 class="h5 mb-0"><a href="#" class="text-muted"></a> Order #<a href="">{{ order.order_number }}</a></h2>
       </div>
     <!-- Main content -->
     <div class="row">
@@ -68,6 +68,14 @@
                     </table>
                 </div>
             </div>
+            <!-- Customer Notes -->
+            <div class="card mb-4">
+                <div class="card-body">
+                <h3 class="h6">Thank you for your order!</h3>
+                <p>Thank you for completing your order! All information will be sent to {{order.email}}. If you have any questions feel free to contact us here <a href="#">Contact</a></p>
+                </div>
+            </div>
+
         </div>
         <div class="col-lg-4">
             <div class="card mb-4">
@@ -75,7 +83,7 @@
                 <div class="card-body">
                     <h5 class="pt-2">Shipping Information</h5>
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-5">
                             <p class="text-muted">Name: </p>
                             <p class="text-muted">Email: </p>
                             <p class="text-muted">Phone: </p>
@@ -86,7 +94,7 @@
                             <p class="text-muted">Street Address 2: </p>
                             <p class="text-muted">County:</p>
                         </div>
-                        <div class="col-6">
+                        <div class="col-7">
                             <p>{{order.full_name}}</p>
                             <p>{{order.email}}</p>
                             <p>{{order.phone_number}}</p>
@@ -102,13 +110,13 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <a href="{% url 'products' %}?discounted_price" class="btn btn-black rounded-0">
-                    <i class="fas fa fa-chevron-left"></i>
-                    <span>Check out our deals!</span>
-                </a>
-            </div>
+    </div>
+      <div class="row">
+        <div class="col-12">
+            <a href="{% url 'deals' %}" class="btn btn-black rounded-0">
+                <i class="fas fa fa-chevron-left"></i>
+                <span>Check out our deals!</span>
+            </a>
         </div>
     </div>
 </div>
