Added course_review page

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -20,7 +20,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="#">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="{% url 'course_reviews' %}">
                 Course Reviews
             </a>
         </li>
