--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -25,7 +25,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="#">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 border-bottom" href="{% url 'contact' %}">
                 Contact
             </a>
         </li>
