Tweak templates and css to be responsive and added bootstrap breadcrumbs

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -5,8 +5,8 @@
 {% endblock %}
 {% block content %}
     <div class="container-fluid product-container">
-        <div class="row pb-5 pt-2">
-            <div class="col text-center page-header">
+        <div class="row pb-5" id="page-header">
+            <div class="col text-center">
                 <h2 class="logo-font">Shopping Cart</h2>
                 <hr class="mb-1 w-50">
             </div>
