--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -7,8 +7,8 @@
 {% endblock %}
 {% block content %}
 <div class="container product-container">
-    <div class="row pb-5 pt-2">
-        <div class="col text-center page-header">
+    <div id="page-header" class="row">
+        <div class="col text-center">
             <h1 class="logo-font">Checkout</h1>
             <hr class="mb-1 w-100">
         </div>
