--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -5,8 +5,8 @@
 {% endblock %}
 {% block content %}
 <div class="container product-container">
-    <div class="row pb-5 pt-2">
-        <div class="col text-center page-header">
+    <div class="row" id="page-header">
+        <div class="col text-center">
             <h1 class="logo-font">Thank You!</h1>
             <hr class="mb-1 w-100">
         </div>
