--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="container-fluid product-container ">
-    <div class="row">
+    <div id="page-header" class="row">
         <div class="col text-center page-header">
             <h2 class="logo-font">About Us</h2>
             <hr class="w-50 mb-1">
