--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -7,9 +7,28 @@
 <div class="container product-container">
     <div class="row pt-4">
         <div class="col-lg-12 home-link">
-            <a href="{% url 'home' %}" class="text-black">
-                <i class="fas fa-home"></i> Home </a>
-            <span>> {{product.name}}</span>
+            <ol id="breadcrumb" class="breadcrumb w-50">
+                <li class="breadcrumb-item" aria-current="page">
+                    <i class="fas fa-home "></i>
+                    <a href="{% url 'home' %}" class="text-black"> Home</a>
+                </li>
+                {% if comming_from == 'deals' %}
+                    <li class="breadcrumb-item">
+                        <a href="{% url 'deals' %}" class="text-black"> Deals</a>
+                    </li>
+                {% elif comming_from == 'products' %}
+                    <li class="breadcrumb-item">
+                        <a href="{% url 'products' %}" class="text-black"> Products</a>
+                    </li>
+                {% endif %}
+                <li class="breadcrumb-item">{{ product.name }}</li>
+            </ol>
+        </div>
+    </div>
+    <div id="page-header"  class="row">
+        <div class="col text-center">
+            <h2 class="logo-font">Products</h2>
+            <hr class="w-50 mb-1">
         </div>
     </div>
     <section>
@@ -66,7 +85,7 @@
                     <div class="col-md-12">
                         <a href="{% url 'edit_product' product.id %}" class="btn btn-warning rounded-0 ">
                             <i class="fas fa-edit"></i>
-                            <span class="text-uppercase">Edit Product</span>
+                            <span class="text-uppercase">Edit</span>
                         </a>
                         <a href="{% url 'delete_product' product.id %}" class="btn btn-danger rounded-0">
                             <i class="fas fa-trash"></i>
