--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -8,11 +8,21 @@
 {% block content %}
 <div class="container-fluid product-container ">
     <div class="row pt-4">
-        <div class="col-lg-12 home-link page-header">
-            <a href="{% url 'home' %}" class="text-black">
-            <i class="fas fa-home"></i> Home </a>
-            <span>> Shop</span>
-            <div class="sort-select-wrapper d-flex d-inline-flex w-25">
+        <div class="col-lg-12 home-link">
+            <ol id="breadcrumb" class="breadcrumb w-25">
+                <li class="breadcrumb-item" aria-current="page">
+                    <i class="fas fa-home "></i>
+                    <a href="{% url 'home' %}" class="text-black"> Home</a>
+                </li>
+                <li class="breadcrumb-item">Products</li>
+            </ol>
+        </div>
+    </div>
+    <div id="page-header"  class="row">
+        <div class="col text-center">
+            <h2 class="logo-font">Products</h2>
+            <hr class="w-50 mb-1">
+            <div class="sort-select-wrapper w-25 pt-3">
                 <select id="sort-selector"
                     class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
                     <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...
@@ -35,12 +45,6 @@
                         {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
                 </select>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col text-center page-header">
-            <h2 class="logo-font">Products</h2>
-            <hr class="w-50 mb-1">
         </div>
     </div>
     <div class="row">
