Remove style.css from all templates except index.html

--- a/home/templates/home/course_reviews.html
+++ b/home/templates/home/course_reviews.html
@@ -1,14 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block extra_css %}
-<link rel="stylesheet" href="{% static  'css/style.css' %}">
-{% endblock %}
-
-
 {% block content %}
 <div class="container-fluid product-container ">
     <div id="page-header" class="row">
-        <div class="col text-center page-header">
+        <div class="col text-center">
             <h2 class="logo-font">Course Reviews</h2>
             <hr class="w-50 mb-1">
         </div>
