--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block extra_css %}
+<link rel="stylesheet" href="{% static  'css/style.css' %}">
+{% endblock %}
 {% block content %}
 <div class="bg p-1">
     <div class="container">
