--- a/cart/templates/cart/product_quantity_form.html
+++ b/cart/templates/cart/product_quantity_form.html
@@ -7,8 +7,10 @@
                 aria-label="quantity field">
         </div>
     </div>
+    <div class="d-flex justify-content-between">
     <button type="submit" class="btn btn-primary btn-sm"><small>Update</small></button>
     <button type="" class="btn btn-danger btn-sm">
         <a href="{% url 'remove_from_cart' item.product.id %}" class="remove-item text-white float-right"><small>Remove</small></a>
-        </button>
+    </button>
+    </div>
 </form>
