--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,70 +1,5 @@
 .nav-bg {
-    background-color: #292b2c;
-}
-
-.product-container {
-    margin-top: 20vh !important;
-}
-
-.home-link {
-    padding-left: 30px;
-}
-
-/* Contact Page */
-
-.flip-card {
-    background-color: transparent;
-    height: 150px;
-    perspective: 1000px;
-  }
-  
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
-  }
-  
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-card-front {
-    background-color: #fff;
-    color: black;
-  }
-  
-  .flip-card-back {
-    background-color: #2980b9;
-    color: white;
-    transform: rotateY(180deg);
-  }
-
-/* Media queries */
-
-@media (max-width: 991px) {
-    .product-container {
-        margin-top: 2vh !important;
-    }
-    .sort-select-wrapper {
-        width: 100% !important;
-    }
-
-    .product-details-box {
-        margin-bottom: 30vh;
-    }
-    
+    background-color: transparent !important;
 }
 
 
