Update allauth templates and add css

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container-fluid product-container ">
-    <div class="row text-center">
+<div class="container-fluid product-container ml-3 ">
+    <div class="row" id="page-header">
         <div class="col-6">
             <div class="allauth-form-inner-content">
                 {% block inner_content %}
