--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 <h1>{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
@@ -15,6 +15,7 @@
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
   <button type="submit">{% trans 'Sign Out' %}</button>
+  <a href="{% url 'home' %}" class="btn btn-primary text-white">Home</a>
 </form>
 
 
