Update css for checkout form

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -43,6 +43,16 @@
     border: 1px solid #000;
 }
 
+select,
+select option {
+  color: #000;
+}
+
+select:invalid,
+select option[value=""] {
+  color: #aab7c4 !important;
+}
+
 /* Loading spinner */
 
 #loading-overlay {
