--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,7 @@ body, html {
   
   .bg { 
     /* The image used */
-    background-image: url("https://cdn.pixabay.com/photo/2020/07/13/16/41/disc-golf-5401312_1280.jpg");
+    background-image: url("/media/disc-golf-home-bg.jpeg");
     opacity: 85%;
     /* Full height */
     height: 100%; 
