--- a/templates/base.html
+++ b/templates/base.html
@@ -143,81 +143,113 @@
 
     <footer class="text-center text-lg-start footer text-muted">
         <div class="container text-center text-md-start mt-5">
-            <div class="row">
-                <div class="col-12">
-                    <form method="GET" action="">
-                        <div class="input-group w-50 pt-5 mx-auto" id="newsletter-form">
-                            <input class="form-control  rounded-0" type="text" name="Newsletter"
-                                placeholder="Sign up to Our Newsletter">
-                            <div class="input-group-append">
-                                <button class="form-control btn btn-primary border rounded-0 ml-1" type="submit">
-                                    <i class="fas fa-envelope fa-lg"></i>
-                                </button>
+            <div class="row pt-5">
+                <div class="col-lg-12">
+                    <div id="mc_embed_signup" class="footer-newsletter">
+                        <form
+                            action="https://gitpod.us10.list-manage.com/subscribe/post?u=0a2867699f3b788ef868a1caf&amp;id=2882212dd1&amp;f_id=008bc4e5f0"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                            class="validate" target="_blank" novalidate>
+                            <div class="input-group w-50 pt-5 mx-auto" id="newsletter-form">
+                                <input type="email" value="" name="EMAIL" class="required email form-control rounded-0" id="mce-EMAIL"
+                                    placeholder="Sign up to Our Newsletter" aria-label="newsletter signup">
+                            <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                                class="orm-control btn btn-primary rounded-0 ml-1">Subscribe</button>
+                            <div id="mce-responses" class="clear foot">
+                                <div class="response text-danger pt-1 pl-3" id="mce-error-response" style="display:none"></div>
+                                <div class="response text-white pt-1 pl-3" id="mce-success-response" style="display:none"></div>
                             </div>
                         </div>
-                    </form>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                   name="b_62bd93b1e49d86b1989c2e9da_785dbc5b60" tabindex="-1" value=""></div>
+                        </form>
+                    </div>
                 </div>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'>
+        </script>
+        <script type='text/javascript'>
+            (function ($) {
+                window.fnames = new Array();
+                window.ftypes = new Array();
+                fnames[0] = 'EMAIL';
+                ftypes[0] = 'email';
+                fnames[1] = 'FNAME';
+                ftypes[1] = 'text';
+                fnames[2] = 'LNAME';
+                ftypes[2] = 'text';
+                fnames[3] = 'ADDRESS';
+                ftypes[3] = 'address';
+                fnames[4] = 'PHONE';
+                ftypes[4] = 'phone';
+                fnames[5] = 'BIRTHDAY';
+                ftypes[5] = 'birthday';
+            }(jQuery));
+            var $mcj = jQuery.noConflict(true);
+        </script>
+        <!--End mc_embed_signup-->
+        </div>
+        </div>
+        <!-- Grid row -->
+        <div class="row mt-3">
+            <!-- Grid column -->
+            <div class="col-md-3 col-lg-3 col-xl-3 mt-5 ">
+                <!-- Content -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                    <i class="fa-solid fa-flying-disc me-3"></i><strong>Disc Golf</strong>
+                </h6>
+                <p>
+                    We review disc golf courses and sell the latest discs for the best price
+                </p>
             </div>
-            <!-- Grid row -->
-            <div class="row mt-3">
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-3 col-xl-3 mt-5 ">
-                    <!-- Content -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fa-solid fa-flying-disc me-3"></i><strong>Disc Golf</strong>
-                    </h6>
-                    <p>
-                        We review disc golf courses and sell the latest discs for the best price
-                    </p>
-                </div>
-                <!-- Grid column -->
+            <!-- Grid column -->
 
-                <!-- Grid column -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mt-5">
-                    <!-- Links -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Join us on Social Media
-                    </h6>
-                    <p>
-                        <a href="" class="me-4 text-reset"><i class="fab fa-facebook-f fa-lg"></i>
-                            @ Lorem Ipsum
-                        </a>
-                    </p>
-                    <p>
-                        <a href="" class="me-4 text-reset"><i class="fab fa-twitter fa-lg"></i>
-                            @ Lorem Ipsum
-                        </a>
-                    </p>
-                    <p>
-                        <a href="" class="me-4 text-reset"><i class="fab fa-instagram fa-lg"></i>
-                            @ Lorem Ipsum
-                        </a>
-                    </p>
-                </div>
-                <div class="col-md-4 col-lg-3 col-xl-3 mt-5">
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        Useful links
-                    </h6>
-                    <p>
-                        <a href="{% url 'products' %}" class="text-reset">All Products</a>
-                    </p>
-                    <p>
-                        <a href="#" class="text-reset">Course Reviews</a>
-                    </p>
-                    <p>
-                        <a href="#" class="text-reset">Contact</a>
-                    </p>
-                </div>
-                <div class="col-md-4 col-lg-3 col-xl-3 mt-5 ">
-                    <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                    <p><i class="fas fa-home me-3"></i> Stockholm, Sweden, 111 11</p>
-                    <p>
-                        <i class="fas fa-envelope me-3"></i>
-                        info@disc-golf@gmail.com
-                    </p>
-                    <p><i class="fas fa-phone me-3"></i> + 01 234 567 89</p>
-                </div>
+            <!-- Grid column -->
+            <div class="col-md-4 col-lg-3 col-xl-3 mt-5">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                    Join us on Social Media
+                </h6>
+                <p>
+                    <a href="" class="me-4 text-reset"><i class="fab fa-facebook-f fa-lg"></i>
+                        @ Lorem Ipsum
+                    </a>
+                </p>
+                <p>
+                    <a href="" class="me-4 text-reset"><i class="fab fa-twitter fa-lg"></i>
+                        @ Lorem Ipsum
+                    </a>
+                </p>
+                <p>
+                    <a href="" class="me-4 text-reset"><i class="fab fa-instagram fa-lg"></i>
+                        @ Lorem Ipsum
+                    </a>
+                </p>
             </div>
+            <div class="col-md-4 col-lg-3 col-xl-3 mt-5">
+                <h6 class="text-uppercase fw-bold mb-4">
+                    Useful links
+                </h6>
+                <p>
+                    <a href="{% url 'products' %}" class="text-reset">All Products</a>
+                </p>
+                <p>
+                    <a href="#" class="text-reset">Course Reviews</a>
+                </p>
+                <p>
+                    <a href="#" class="text-reset">Contact</a>
+                </p>
+            </div>
+            <div class="col-md-4 col-lg-3 col-xl-3 mt-5 ">
+                <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                <p><i class="fas fa-home me-3"></i> Stockholm, Sweden, 111 11</p>
+                <p>
+                    <i class="fas fa-envelope me-3"></i>
+                    info@disc-golf@gmail.com
+                </p>
+                <p><i class="fas fa-phone me-3"></i> + 01 234 567 89</p>
+            </div>
+        </div>
         </div>
         <div class="text-center p-4">
             © 2021 Copyright: Educational Purposes Only
